# document-rag

./: README.md  example.env  pyproject.toml
src/applications/doc_processing_function/: .funcignore  classification.py  extraction.py  function_app.py  models.py  prompts.py  requirements.txt  storage.py
src/applications/document_rag/: Dockerfile  app.py  config.py  llm.py  prompts.py  rag.py  requirements.txt  storage.py
src/applications/document_rag/pages/: add_documents.py  chatbot.py  documents.py
tests/doc_processing_function/: pytest.ini
tests/document_rag/: pytest.ini  test_storage.py
